--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="app/app.js"></script>
   <script src="app/components/main/main.controller.js"></script>
+  <script src="app/components/login/login.controller.js"></script>
+  <script src="app/components/register/register.controller.js"></script>
+  <script src="app/services/AuthService.js"></script>
 
 </head>
 <body>
