--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,10 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>User MEAN</title>
   <!-- Angular-JS -->
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>-->
+  <script src="/angular/angular.js"></script>
+  <script src="/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/angular-aria/angular-aria.js"></script>
+  <script src="/angular-animate/angular-animate.js"></script>
+  <script src="/angular-material/angular-material.js"></script>
+  <link rel="stylesheet" href="/angular-material/angular-material.css">
+  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
   <script src="app/app.js"></script>
+  <script src="app/components/appController.js"></script>
   <script src="app/components/main/main.controller.js"></script>
   <script src="app/components/login/login.controller.js"></script>
   <script src="app/components/register/register.controller.js"></script>
@@ -16,6 +22,19 @@
 
 </head>
 <body>
-  <div ui-view></div>
+  <div ng-controller="appController" layout="column" layout-fill>
+    <md-toolbar>
+      <div class="md-toolbar-tools">
+        <span>MEAN APP</span>
+        <span flex></span>
+        <md-button ng-hide="!auth" ng-click="logout()">
+          Logout
+        </md-button>
+      </div>
+    </md-toolbar>
+    <md-content>
+      <div ui-view></div>
+    </md-content>
+  </div>
 </body>
 </html>
